// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders trip timetable 1`] = `
<div>
  <table>
    <thead>
      <tr>
        <th
          class="stop-name"
        />
        <th>
          Sched­uled
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          class="stop-name"
        >
          <a
            href="/stops/2900C0305"
          >
            Harford Park & Ride
          </a>
        </td>
        <td>
          10:05
        </td>
      </tr>
      <tr>
        <td
          class="stop-name"
        >
          <a
            href="/stops/2900N1237"
          >
            County Hall Bus Shelter (A)
          </a>
        </td>
        <td>
          10:13
        </td>
      </tr>
      <tr>
        <td
          class="stop-name"
          rowspan="2"
        >
          <a
            href="/stops/2900N12909"
          >
            Norwich Bus Station (F)
          </a>
        </td>
        <td>
          10:18
        </td>
      </tr>
      <tr>
        <td>
          10:20
        </td>
      </tr>
      <tr
        class="minor"
      >
        <td
          class="stop-name"
        >
          <a
            href="/stops/2900N12245"
          >
            Norwich Tombland (CM)
          </a>
        </td>
        <td>
          10:24
        </td>
      </tr>
      <tr>
        <td
          class="stop-name"
        >
          <a
            href="/stops/2900N12233"
          >
            Norwich Anglia Square (B)
          </a>
        </td>
        <td>
          10:27
        </td>
      </tr>
      <tr>
        <td
          class="stop-name"
        >
          <a
            href="/stops/2900S32517"
          >
            Sprowston Park and Ride
          </a>
        </td>
        <td>
          10:40
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders trip timetable 2`] = `
<div>
  <label>
    <input
      type="checkbox"
    />
     Show previous stops
  </label>
  <table>
    <thead>
      <tr>
        <th
          class="stop-name"
        />
        <th>
          Sched­uled
        </th>
        <th>
          Actual
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          class="stop-name"
        >
          <a
            href="/stops/2900N1237"
          >
            County Hall Bus Shelter (A)
          </a>
        </td>
        <td>
          10:13
        </td>
        <td>
          09:17
        </td>
      </tr>
      <tr>
        <td
          class="stop-name"
          rowspan="2"
        >
          <a
            href="/stops/2900N12909"
          >
            Norwich Bus Station (F)
          </a>
        </td>
        <td>
          10:18
        </td>
      </tr>
      <tr>
        <td>
          10:20
        </td>
      </tr>
      <tr
        class="minor"
      >
        <td
          class="stop-name"
        >
          <a
            href="/stops/2900N12245"
          >
            Norwich Tombland (CM)
          </a>
        </td>
        <td>
          10:24
        </td>
      </tr>
      <tr>
        <td
          class="stop-name"
        >
          <a
            href="/stops/2900N12233"
          >
            Norwich Anglia Square (B)
          </a>
        </td>
        <td>
          10:27
        </td>
      </tr>
      <tr>
        <td
          class="stop-name"
        >
          <a
            href="/stops/2900S32517"
          >
            Sprowston Park and Ride
          </a>
        </td>
        <td>
          10:40
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders trip timetable 3`] = `
<div>
  <label>
    <input
      type="checkbox"
    />
     Show previous stops
  </label>
  <table>
    <thead>
      <tr>
        <th
          class="stop-name"
        />
        <th>
          Sched­uled
        </th>
        <th>
          Actual
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          class="stop-name"
        >
          <a
            href="/stops/2900N1237"
          >
            County Hall Bus Shelter (A)
          </a>
        </td>
        <td>
          10:13
        </td>
        <td>
          09:17
        </td>
      </tr>
      <tr>
        <td
          class="stop-name"
          rowspan="2"
        >
          <a
            href="/stops/2900N12909"
          >
            Norwich Bus Station (F)
          </a>
        </td>
        <td>
          10:18
        </td>
      </tr>
      <tr>
        <td>
          10:20
        </td>
      </tr>
      <tr
        class="is-highlighted minor"
      >
        <td
          class="stop-name"
        >
          <a
            href="/stops/2900N12245"
          >
            Norwich Tombland (CM)
          </a>
        </td>
        <td>
          10:24
        </td>
      </tr>
      <tr>
        <td
          class="stop-name"
        >
          <a
            href="/stops/2900N12233"
          >
            Norwich Anglia Square (B)
          </a>
        </td>
        <td>
          10:27
        </td>
      </tr>
      <tr>
        <td
          class="stop-name"
        >
          <a
            href="/stops/2900S32517"
          >
            Sprowston Park and Ride
          </a>
        </td>
        <td>
          10:40
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
